--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,31 @@
-# Compiled class file
+# Eclipse
+.settings/
+.classpath
+.project
+
+# Build output
+build/
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+
+# Gradle
+.gradle/
+
+# Other
+.idea/
+*.iml
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
+# Package Files - These should not be in version control
+# Instead, dependencies should be managed by a build tool like Maven or Gradle
+# For this project, we are including the lib folder explicitly.
 *.war
 *.nar
 *.ear
@@ -19,7 +33,9 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# VM crash logs
 hs_err_pid*
 replay_pid*
-/build/
+
+# Keep the libraries in the lib folder
+!/src/main/webapp/WEB-INF/lib/*.jar
